# patchtst_timeseries

./: .gitignore  .session_secret  TODO_nodes.md  backtest_AAPL_stable.csv  bulksim.py  bulktrain.py  claude.txt  credentials.txt  display_trades.ipynb  from_trained_test.csv  from_trained_test.ipynb  from_trained_test_ohlc.ipynb  main.py  mutivariant.ipynb  optuna.ipynb  optuna_no_vol.pynb  optuna_pred_surface.py  patchtst.ipynb  pyproject.toml  simulator.py  start_jupyter.sh  thresh_surface.py  ticker_data.py  trade.py  univariant.ipynb  walk_forward_backtest.ipynb  walk_forward_log.csv
.ipynb_checkpoints/: display_trades-checkpoint.ipynb  from_trained_test-checkpoint.csv  from_trained_test-checkpoint.ipynb
app/: main.py  model_reports.py  regime_monitor.py  reports.py
app/templates/: index.html  login.html  models.html  pred_surface.html  regime_monitor.html  sim_detail.html  surface.html
checkpoints/: patchtst_univariant_aapl_until2023
checkpoints.remote2/AAPL_2015-01-01_2025-01-01/: cv_results.csv  metrics.csv  optuna_trials.csv
checkpoints.remote2/ABT_2015-01-01_2025-01-01/: note.json  pred_surface_cache.pkl
checkpoints.remote2/ACN_2015-01-01_2025-01-01/: metrics.csv  note.json  optuna_summary.json  optuna_trials.csv
checkpoints.remote2/ADBE_2015-01-01_2025-01-01/: cv_results.csv  pred_surface_cache.pkl  predictions_cache.pkl
checkpoints.remote2/AMAT_2015-01-01_2025-01-01/: metrics.csv
checkpoints.remote2/GE_2015-01-01_2025-01-01/: metrics.csv  (+1 more)
experiments/: walk_forward_backtest.ipynb
lib/: model_trainer.py  trade.py  tradeparams.py  visualize.py
(+1556 files in other folders)
