[project]
name = "timeseries-transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel==6.31.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.4",
    "litlogger>=0.1.7",
    "matplotlib>=3.10.8",
    "neuralforecast>=3.1.4",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "tzdata>=2025.3",
    "yfinance>=1.2.0",
]
